# deck

./: .claude  .gitignore  0214_deck_plan.md  CLAUDE.md  Cargo.toml  Makefile
.ai/: ARCHITECTURE.md  BUILD.md  INTENT.md  META.md  OBSERVABILITY.md
.ci/: doc-review.sh
docs/: 2026-02-14_基本設計書.md  USER_GUIDE.md  constraints.md  plan-template.md  qa-checklist-template.md  spec.md  summary-template.md  tasks-template.md
src/: app.rs  br_poller.rs  config.rs  dir_tree.rs  file_preview.rs  input_history.rs  log_store.rs  main.rs  needs_input.rs  persistence.rs  pty_manager.rs  session.rs
src/ui/: dir_tree_panel.rs  file_panel.rs  input_bar.rs  log_panel.rs  mod.rs  session_list.rs  status_bar.rs  theme.rs
