[package]
name = "deck"
version = "0.1.0"
edition = "2024"
description = "Multi-session Claude Code manager TUI"
license = "MIT"

[dependencies]
# FrankenTUI - pinned to 0.1.1
ftui-core = "=0.1.1"
ftui-layout = "=0.1.1"
ftui-render = "=0.1.1"
ftui-runtime = "=0.1.1"
ftui-widgets = "=0.1.1"
ftui-style = "=0.1.1"
ftui-text = "=0.1.1"

# PTY management
portable-pty = "0.9"

# Data serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory walking
walkdir = "2"

# Configuration paths
dirs = "6"

# Pattern matching for needs_input
regex = "1"

# Error handling (used by portable-pty)
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
